[package]
authors = ["Robert <robert.balicki@gmail.com>"]
name = "hello-rocket"
version = "0.1.0"


[dependencies]
diesel = { version = "0.12.1", features = [ "postgres" ] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.10.0"
error-chain = "0.10.0"
query_param_group = "0.1.0"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = "0.2.6"
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
